# diff-ext

./: .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  Changelog.txt  GNUmakefile  LICENSE  LICENSE.rtf  LICENSE_RU  LICENSE_RU.rtf  Makefile  Makefile.ms  PRIVACY.md  README.md  TODO.txt  diff-ext-3.x.pad  diff-ext-4.x.pad  faq.html  features.html  index.html  install.html  license.html  script.js  style.css  support.html
.github/: FUNDING.yml
.github/workflows/: build.yml  release.yml
_includes/: footer.html  head.html  header.html
classic/: CMakeLists.txt  contextmenufactory.cpp  contextmenufactory.h
classic/src/: contextmenu.cpp  contextmenu.h  diff-ext-classic.def  dllmain.cpp  resources.h  resources.rc
diff-ext/: GNUmakefile  Makefile
diff-ext-setup/: CMakeLists.txt
diff-ext-setup/src/: diff-ext-setup.manifest  diff-ext-setup.rc  main.cpp  resource.h
diff-ext/i18n/: Makefile  Makefile.ms
diff-ext/i18n/de/: GNUmakefile  Makefile  Makefile.ms  diff_ext.def  diff_ext.rc
diff-ext/i18n/ja/: GNUmakefile  Makefile  Makefile.ms  diff_ext.def  diff_ext.rc
diff-ext/i18n/ru/: GNUmakefile  Makefile  Makefile.ms  diff_ext.def  diff_ext.rc
diff-ext/i18n/ua/: GNUmakefile  Makefile  diff_ext.def  diff_ext.rc
diff-ext/include/: resource.h
diff-ext/src/: GNUmakefile  Makefile  Makefile.ms  class_factory.cpp  class_factory.h  depend.mak  diff_ext.cpp  diff_ext.def  diff_ext.h  diff_ext.rc  diff_ext.rh  diff_ext_res.h  icon_factory.cpp  icon_factory.h  main.c  resource.rc  server.cpp  server.h
diff-ext/src/lang/: diff_ext_lang.c  diff_ext_ru.rc
install/: GNUmakefile  Makefile  diff_ext.iss  diff_ext.nsi  german.isl  japanese.isl  russian.isl  ukrainian.isl
install/diff-ext/: diff-ext.wxs
installer/: LICENSE  diff-ext.iss
manifests/: AppxManifest-ARM64.xml  AppxManifest-Win32.xml  AppxManifest.dev.xml.in  AppxManifest.win10.dev.xml.in  AppxManifest.win10.xml.in  AppxManifest.xml.in
modern/: CMakeLists.txt
modern/src/: basecommand.cpp  basecommand.h  clearmrucommand.cpp  clearmrucommand.h  comparefilescommand.cpp  comparefilescommand.h  comparewithmrucommand.cpp  comparewithmrucommand.h  comparewithtopcommand.cpp  comparewithtopcommand.h  diff-ext-modern.def  dllmain.cpp  mruenumerator.cpp  mruenumerator.h  mrusubmenu.cpp  mrusubmenu.h  rememberfilescommand.cpp  rememberfilescommand.h  resources.rc
packaging/: AppxManifest.xml
setup/: Makefile  Makefile.ms  about.c  about.dlg  debug_page.c  diff_ext_setup.c  diff_ext_setup.manifest  diff_ext_setup.prj  diff_ext_setup.rc  diff_ext_setup.rh  diff_ext_setup_res.h  layout.c  layout.h  logging.dlg  main.c  options.dlg  options_page.c  page.h
setup/common/: diff_ext_setup.manifest
setup/i18n/: GNUmakefile  Makefile
setup/i18n/de/: GNUmakefile  Makefile  Makefile.ms  about.dlg  diff_ext_setup.def  diff_ext_setup.rc  options.dlg
setup/i18n/ja/: GNUmakefile  Makefile  Makefile.ms  about.dlg  diff_ext_setup.def  diff_ext_setup.rc  logging.dlg  options.dlg
setup/i18n/ru/: GNUmakefile  Makefile  Makefile.ms  about.dlg  diff_ext_setup.def  diff_ext_setup.rc  logging.dlg  options.dlg
setup/i18n/ua/: GNUmakefile  Makefile  about.dlg  diff_ext_setup.def  diff_ext_setup.rc  logging.dlg  options.dlg
setup/include/: resource.h
setup/lang/: about_ru.dlg  diff_ext_setup_lang.c  diff_ext_setup_ru.rc  logging_ru.dlg  options_ru.dlg
setup/src/: GNUmakefile  Makefile  Makefile.ms  about.c  about.dlg  debug_page.c  depend.mak  diff_ext_setup.def  diff_ext_setup.rc  main.c  options.dlg
shared/: CMakeLists.txt
shared/include/: classfactory.h  settings.h  util.h
shared/src/: settings.cpp  util.cpp
tools/: GNUmakefile
tools/update_version/src/: GNUmakefile  Makefile  main.c
util/: GNUmakefile  Makefile  Makefile.ms
util/include/debug/: trace.h
util/include/log/: file_sink.h  log.h  log_message.h  log_sink.h
util/include/util/: dialog.h  icon.h  menu.h  resource_string.h  string.h
util/include/util/cont/: deque.h  dlist.h  list.h
util/src/: GNUmakefile  Makefile  Makefile.ms  depend.mak  file_sink.cpp  hyperlink.c  icon.cpp  log.cpp  menu.cpp  resource_string.c  set_dlgitem_url.c  string.cpp  trace.cpp  url_control.c
util/test/: list.cpp  log.cpp
